@@ -1,5 +1,6 @@
 package com.rossatti.spring_pjc_2025.security.service;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -7,13 +8,15 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+//import java.util.Collections;
 /*
  * 💡 Obs. Importante:
 * Esse código é um mock (usuário fixo: admin / senha 123456).
 * Quando quiser autenticar via banco, basta criar uma entidade Usuario, um UsuarioRepository, e buscar da JPA ao invés de fazer esse if.
  * 
  */
+import java.util.List;
+
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
 
@@ -34,7 +37,8 @@ public class UserDetailsServiceImpl implements UserDetailsService {
         return new User(
                 "admin",
                 passwordEncoder.encode("123456"), // senha codificada (mesmo valor usado no login)
-                Collections.emptyList() // roles/authorities se desejar
-        );
+                List.of(new SimpleGrantedAuthority("ROLE_ADMIN"))
+            );
     }
 }
+//                Collections.emptyList() // roles/authorities se desejar
